[package]
name = "termorrow"
version = "0.1.0"
authors = ["toshokan <toshokan@shojigate.net>"]
repository = "https://github.com/toshokan/termorrow"
license = "MIT"
documentation = "https://docs.rs/termorrow"
description = "Ergonomic wrapper for termios.h"
edition = "2018"

[dependencies]
flag-mast = "^0.2"

[build-dependencies]
bindgen = "0.53.1"
